# geometry_module

./: CMakeLists.txt  geometry_module.hpp
inc/: gm_primitives.hpp  gm_vector.hpp  vectors.hpp
src/: gm_primitives.cpp  gm_vector.cpp  vectors.cpp
